--- a/package.json
+++ b/package.json
@@ -2,11 +2,29 @@
   "name": "project-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "parcel serve src/pages/registration/index-registration.html --open --no-cache",
+    "build": "parcel build index.hbs --out-dir dist --no-minify"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.16",
+    "parcel": "^2.2.1",
+    "parcel-transformer-hbs": "^1.0.4",
+    "postcss-import": "^14.0.2",
+    "postcss-sass": "^0.5.0",
+    "precss": "^4.0.0",
+    "@parcel/transformer-sass": "^2.2.1",
+    "sass": "^1.49.7"
+  },
+  "dependencies": {
+    
+    "handlebars": "^4.7.7",
+    "parcel-plugin-handlebars": "^0.4.4",
+    "postcss": "^8.4.6"
+  }
 }
