--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sass": "^1.49.7"
   },
   "dependencies": {
-    
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "handlebars": "^4.7.7",
     "parcel-plugin-handlebars": "^0.4.4",
     "postcss": "^8.4.6"
