--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "project-chat",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": ">=12"
-  },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "targets": {
     "default": {
@@ -18,7 +15,7 @@
     "build": "npm run clean && npm run build:build&& npm run build:build2",
     "clean": "rm -rf dist/*",
     "server": "node server.js",
-    "start": "node server.js"
+    "start": "npm run build && npm run server"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +36,7 @@
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "express": "^4.17.2",
     "handlebars": "^4.7.7",
+    "parcel-plugin-handlebars": "^0.4.4",
     "postcss": "^8.4.6"
   }
 }
