--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run clean && npm run build:build2",
     "clean": "rm -rf dist/*",
     "server": "node server.js",
-    "start": "npm run build && npm run server"
+    "start": "npm i && npm run build && npm run server"
   },
   "keywords": [],
   "author": "",
