--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "parcel serve \"src/pages/**/*.html\" --open --no-cache",
     "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash",
     "build": "npm run clean && npm run build:build2",
-    "clean": "rm -rf dist/*",
+    "clean": "rimraf dist/*",
     "server": "node server.js",
     "start": "npm i && npm run build && npm run server"
   },
@@ -29,7 +29,9 @@
     "postcss-import": "^14.0.2",
     "postcss-sass": "^0.5.0",
     "precss": "^4.0.0",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "rimraf": "^3.0.2"
+
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
