--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "postcss-import": "^14.0.2",
     "postcss-sass": "^0.5.0",
     "precss": "^4.0.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.49.7",
-    "rimraf": "^3.0.2"
-
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
