--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "watch": "parcel serve \"src/pages/**/*.html\" --open --no-cache",
+    "watch": "parcel serve \"src/pages/test-page-for-dev/*.html\" --open --no-cache",
     "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash",
     "build": "npm run clean && npm run build:build2",
     "clean": "rimraf dist/*",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@parcel/resolver-glob": "^2.2.1",
     "@parcel/transformer-sass": "^2.2.1",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.16",
     "parcel": "^2.2.1",
@@ -38,6 +39,7 @@
     "express": "^4.17.2",
     "handlebars": "^4.7.7",
     "parcel-plugin-handlebars": "^0.4.4",
-    "postcss": "^8.4.6"
+    "postcss": "^8.4.6",
+    "uuid": "^8.3.2"
   }
 }
