--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "watch": "parcel serve \"src/pages/test-page-for-dev/*.html\" --open --no-cache",
+    "watch": "parcel serve \"src/pages/**/*.html\" --open --no-cache",
     "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash",
     "build": "npm run clean && npm run build:build2",
     "clean": "rimraf dist/*",
