--- a/package.json
+++ b/package.json
@@ -10,32 +10,38 @@
   },
   "scripts": {
     "watch": "parcel serve \"src/pages/**/*.html\" --open --no-cache",
-    "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash",
+    "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash --no-optimize",
     "build": "npm run clean && npm run build:build2",
     "clean": "rimraf dist/*",
     "server": "node server.js",
     "start": "npm i && npm run build && npm run server",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "stylelint":"npx stylelint \"**/*.sass\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@parcel/resolver-glob": "^2.2.1",
-    "@parcel/transformer-sass": "^2.2.1",
+    "@parcel/transformer-postcss": "^2.3.2",
+    "@parcel/transformer-sass": "^2.3.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.16",
     "eslint": "^8.9.0",
-    "parcel": "^2.2.1",
+    "parcel": "2.3.2",
     "parcel-transformer-hbs": "^1.0.4",
     "postcss-import": "^14.0.2",
+    "postcss-lit": "^0.4.3",
     "postcss-sass": "^0.5.0",
     "precss": "^4.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.49.7",
+    "stylelint": "^14.5.3",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard-scss": "3.0.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
