--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
   "exclude": [
     ".github",
     "node_modules",
-    ".parcel-cache"
+    ".parcel-cache",
+    "static"
   ],
   "compilerOptions": {
     "outDir": "dist",
@@ -16,6 +17,8 @@
     "sourceMap": true,
     "removeComments": true,
     "suppressImplicitAnyIndexErrors": false,
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
