--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "server": "node server.js",
     "start": "npm i && npm run build && npm run server",
     "lint": "eslint . --fix",
-    "stylelint":"npx stylelint \"**/*.scss\""
+    "stylelint": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +37,7 @@
     "postcss-lit": "^0.4.3",
     "postcss-sass": "^0.5.0",
     "precss": "^4.0.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sass": "^1.49.7",
     "stylelint": "^14.5.3",
