some changes after review

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "watch": "parcel serve \"src/pages/**/*.html\" --open --no-cache",
-    "build:build2": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash --no-optimize",
+    "build:build1": "parcel build \"src/pages/profile/*.html\" \"src/pages/login/*.html\" \"src/pages/registration/*.html\" \"src/pages/chats/*.html\" \"src/pages/error-page/*.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash --no-optimize",
+    "build:build2": "parcel build \"src/pages/index.html\" --dist-dir dist/**  --public-url ../ --no-cache --no-content-hash --no-optimize",
     "build": "npm run clean && npm run build:build2",
     "clean": "rimraf dist/*",
     "server": "node server.js",
