--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@parcel/transformer-postcss": "2.3.2",
     "@parcel/transformer-sass": "2.3.2",
     "@types/chai": "4.3.0",
-    "@types/jsdom": "^16.2.14",
+    "@types/jsdom": "16.2.14",
     "@types/mocha": "9.1.0",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.12.1",
@@ -43,7 +43,7 @@
     "cross-env": "^7.0.3",
     "cssnano": "5.0.16",
     "eslint": "8.9.0",
-    "jsdom": "^19.0.0",
+    "jsdom": "19.0.0",
     "mocha": "9.2.2",
     "parcel": "2.3.2",
     "parcel-transformer-hbs": "1.0.4",
@@ -57,7 +57,7 @@
     "stylelint": "14.5.3",
     "stylelint-config-sass-guidelines": "9.0.1",
     "stylelint-config-standard-scss": "3.0.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "10.7.0",
     "typescript": "4.5.5"
   },
   "dependencies": {
