--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "stylelint": "npx stylelint \"**/*.scss\" --fix",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha",
     "serve": "webpack serve --mode=development --progress",
-    "build": "npm run clean && webpack --config webpack.config.prod.js"
+    "build": "npm run clean && webpack --config webpack.config.prod.js",
+    "precommit": "npm run test && npm run lint && npm run stylelint",
+    "prepare": "husky install"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit":"npm-run-all test lint stylelint"
+    }
   },
   "keywords": [],
   "author": "",
@@ -41,43 +48,45 @@
     "@typescript-eslint/parser": "5.12.1",
     "autoprefixer": "10.4.2",
     "chai": "4.3.6",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "10.2.4",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.1",
     "cssnano": "5.0.16",
     "eslint": "8.9.0",
-    "file-loader": "^6.2.0",
-    "handlebars-loader": "^1.7.1",
-    "html-webpack-plugin": "^5.5.0",
+    "file-loader": "6.2.0",
+    "handlebars-loader": "1.7.1",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "7.0.0",
     "jsdom": "19.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
+    "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
-    "node-sass": "^7.0.1",
+    "node-sass": "7.0.1",
+    "npm-run-all": "4.1.5",
     "parcel": "2.3.2",
     "parcel-transformer-hbs": "1.0.4",
     "postcss-import": "14.0.2",
     "postcss-lit": "0.4.3",
-    "postcss-loader": "^6.2.1",
+    "postcss-loader": "6.2.1",
     "postcss-sass": "0.5.0",
     "precss": "4.0.0",
     "prettier": "2.5.1",
     "rimraf": "3.0.2",
     "sass": "1.49.7",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
     "stylelint": "14.5.3",
     "stylelint-config-sass-guidelines": "9.0.1",
     "stylelint-config-standard-scss": "3.0.0",
-    "ts-loader": "^9.2.8",
+    "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.5.5",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4",
+    "webpack-merge": "5.8.0",
+    "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
