--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "precommit": "npm-run-all lint --parallel stylelint test",
     "prepare": "husky install"
   },
-  "husky":{
-    "hooks":{
-      "pre-commit":"npm run precommit"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run precommit"
     }
   },
   "keywords": [],
@@ -57,7 +57,7 @@
     "file-loader": "6.2.0",
     "handlebars-loader": "1.7.1",
     "html-webpack-plugin": "5.5.0",
-    "husky": "7.0.0",
+    "husky": "^7.0.4",
     "jsdom": "19.0.0",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
