--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "file-loader": "6.2.0",
     "handlebars-loader": "1.7.1",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^7.0.4",
     "jsdom": "19.0.0",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
@@ -86,7 +85,8 @@
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.7.4",
     "webpack-merge": "5.8.0",
-    "webpack-node-externals": "3.0.0"
+    "webpack-node-externals": "3.0.0",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
