--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "start": "npm run build && npm run server",
     "lint": "eslint . --fix",
     "stylelint": "npx stylelint \"**/*.scss\" --fix",
-    "test1": "cross-env NODE_ENV=test ./node_modules/.bin/mocha",
+    "mocha": "cross-env NODE_ENV=test ./node_modules/.bin/mocha",
     "serve": "webpack serve --mode=development --progress",
     "build": "npm run clean && webpack --config webpack.config.prod.js",
-    "precommit": "npm-run-all lint --parallel stylelint test1",
+    "test": "npm-run-all lint --parallel stylelint mocha",
     "prepare": "husky install"
   },
   "husky": {
